# llm_first_test

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
llm_chat/: agent.py  bot.py  console_app.py  init.py  model.py  token_tracker.py  tools.py
src/llm_chat/: bot.py  model.py
